--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -413,7 +413,7 @@
                 </div>
 
                 <div class="cta-btn">
-                  <button class="aileronBold textColor54565A fontSize16px text-uppercase">Try 14 days free
+                  <button class="aileronBold textColor54565A fontSize16px text-uppercase button-one">Try 14 days free
                     trial</button>
                 </div>
               </div>
@@ -436,7 +436,7 @@
                 </div>
 
                 <div class="cta-btn">
-                  <button class="aileronBold textColor2F5BEA fontSize16px text-uppercase" id="white-button">Try 14 days
+                  <button class="aileronBold textColor2F5BEA fontSize16px text-uppercase button-two" id="white-button">Try 14 days
                     free
                     trial</button>
                 </div>
