fix spacing unique blocks

--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -283,7 +283,7 @@
             1500+ Unique Blocks
           </div>
 
-          <div class="description aileronRegular fontSize16px lineHeight28px textColor54565A my-5 my-md-0">
+          <div class="description aileronRegular fontSize16px lineHeight28px textColor54565A my-5">
             Use Timeline to plan projects right the first time. See how the&nbsp;pieces fit together so you can spot
             gaps and overlaps
             before you start.
