update mobile responsive css

--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -33,9 +33,9 @@
               <a class="nav-link aileronRegular fontSize17px textColor7E8085" href="#">Pricing</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link aileronRegular fontSize17px textColor7E8085 dropdown-toggle" href="#"
+              <a class="nav-link aileronRegular fontSize17px textColor7E8085 dropdown-toggle position-relative" href="#"
                 id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Pages
+                Pages <span class="drop-down-nav-icon"><i class="fas fa-chevron-down"></i></span>
               </a>
               <div class="dropdown-menu backgroundColor2F5BEA" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item text-white" href="#">Page 1</a>
@@ -45,7 +45,7 @@
             </li>
           </ul>
           <div class="header-cta-btn-wrapper">
-            <button class="cta-btn-get-started-now aileronBold fontSize17px textColor7E8085">Get started now</button>
+            <button class="cta-btn-get-started-now aileronBold fontSize17px textColor7E8085 mt-3 mt-lg-0">Get started now</button>
           </div>
         </div>
       </nav>
@@ -101,8 +101,8 @@
 
       <div class="row">
         <div class="technology mx-auto col-md-10 px-md-0">
-          <div class="row d-flex justify-content-md-between mx-0">
-            <div class="technology-tabs text-center col-md-3 px-0" id="technology-tab-1">
+          <div class="row d-flex flex-row justify-content-between mx-0">
+            <div class="technology-tabs text-center col-3 px-0" id="technology-tab-1">
               <div class="technology-text">
                 <img src="image/drag.png" alt="drag" class="img-fluid">
               </div>
@@ -111,7 +111,7 @@
               </div>
             </div>
 
-            <div class="technology-tabs text-center mt-3 mt-md-0 col-md-3 px-0"  id="technology-tab-2">
+            <div class="technology-tabs text-center col-3 px-0"  id="technology-tab-2">
               <div class="technology-text">
                 <img src="image/settings.png" alt="drag" class="img-fluid">
               </div>
@@ -120,7 +120,7 @@
               </div>
             </div>
 
-            <div class="technology-tabs text-center mt-3 mt-md-0 col-md-3 px-0"  id="technology-tab-3">
+            <div class="technology-tabs text-center col-3 px-0"  id="technology-tab-3">
               <div class="technology-text">
                 <img src="image/responsive.png" alt="drag" class="img-fluid">
               </div>
@@ -241,7 +241,7 @@
 
         <div class="row cta-content">
           <div class="image col-md-6">
-            <img src="image/cta-image.png" alt="cta-image">
+            <img src="image/cta-image.png" alt="cta-image" class="built-for-growth-img">
           </div>
 
           <div class="cta-text offset-md-1 col-md-5">
