--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -224,7 +224,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 d-flex flex-md-row align-items-center">
+          <div class="col-md-4 d-flex flex-md-row">
             <div class="step-content text-center">
               <img src="image/step-icon-3.png" alt="step-icon-3" class="step-img img-fluid">
 
@@ -377,7 +377,7 @@
         </div>
       </div>
 
-      <div class="customers-brands">
+      <div class="customers-brands text-center">
         <img src="image/brands.png" alt="" class="img-fluid">
       </div>
     </div>
@@ -487,7 +487,7 @@
             </div>
 
 
-            <div class="footer-anchor-text col-md-2 offset-md-3 aileronBold textColor2C2E30 fontSize18px mt-5 mt-md-0">
+            <div class="footer-anchor-text col-md-2 offset-md-2 offset-lg-3 aileronBold textColor2C2E30 fontSize18px mt-5 mt-md-0">
               <div class="title">
                 Company
               </div>
@@ -513,7 +513,7 @@
               </div>
             </div>
 
-            <div class="footer-anchor-text col-md-2 offset-md-3 aileronBold textColor2C2E30 fontSize18px mt-5 mt-md-0">
+            <div class="footer-anchor-text col-md-2 offset-lg-3 aileronBold textColor2C2E30 fontSize18px mt-5 mt-md-0">
               <div class="title">
                 Product
               </div>
