--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -311,8 +311,8 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="testimonials-blocks col-md-4 mx-3 ml-md-0">
+      <div class="row line position-relative">
+        <div class="testimonials-blocks col-md-4 mx-3 ml-md-0 z-index-1 bg-white">
           <div class="block position-relative">
             <div class="content-block notoSerifItalic fontSize16px textColor7E8085 lineHeight28px" id="content-1">
               Life before Company was very chaotic — we got a lot of phone calls, a lot of mistyped orders. So with
@@ -332,7 +332,7 @@
           </div>
         </div>
 
-        <div class="testimonials-blocks col-md-4 mx-3 ml-md-0">
+        <div class="testimonials-blocks col-md-4 mx-3 ml-md-0 bg-white">
           <div class="block position-relative">
             <div class="content-block notoSerifItalic fontSize16px textColor7E8085 lineHeight28px" id="content-2">
               There’s no way we could have hired these many people and gotten so much business had we not had all of
@@ -352,7 +352,7 @@
           </div>
         </div>
 
-        <div class="testimonials-blocks col-md-4 mx-3 mx-md-0">
+        <div class="testimonials-blocks col-md-4 mx-3 mx-md-0 bg-white">
           <div class="block  position-relative">
             <div class="content-block notoSerifItalic fontSize16px textColor7E8085 lineHeight28px" id="content-3">
               Wow. I just updated my site and it was SO SIMPLE. I am blown away. You guys truly kick ass. Thanks for
@@ -481,7 +481,7 @@
 
     <div class="main-footer container-fluid">
         <div class="footer-anchor-text-wrapper container">
-          <div class="row">
+          <div class="row web position-relative">
             <div class="footer-logo col-md-1">
               <img src="image/logo.png" alt="logo-footer">
             </div>
