update hover elements css

--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -68,7 +68,7 @@
           </div>
 
           <div class="blue-cta-btn-wrapper  d-flex flex-column flex-md-row align-items-md-center ">
-            <button class="cta-get-started aileronBold fontSize16px text-white backgroundColor2F5BEA text-uppercase">Get
+            <button class="cta-get-started btn-bg-green aileronBold fontSize16px text-white backgroundColor2F5BEA text-uppercase">Get
               started</button>
 
             <div class="cta-text aileronBold fontSize17px textColor7E8085 pt-3 pt-md-0">
@@ -269,7 +269,7 @@
             </div>
 
             <div class="cta-anchor-text aileronBold fontSize18px lineHeight34px textColor2F5BEA">
-              <a href="">Try xPider now</a>
+              <a href="#">Try xPider now</a>
             </div>
           </div>
         </div>
@@ -436,7 +436,7 @@
                 </div>
 
                 <div class="cta-btn">
-                  <button class="aileronBold textColor2F5BEA fontSize16px text-uppercase button-two" id="white-button">Try 14 days
+                  <button class="aileronBold textColor2F5BEA fontSize16px text-uppercase button-two btn-bg-white" id="white-button">Try 14 days
                     free
                     trial</button>
                 </div>
@@ -470,8 +470,8 @@
             Millions of people around the world have already made xPider the place where their dream happens.
           </div>
 
-          <div class="blue-cta-btn-wrapper">
-            <button class="cta-get-started aileronBold fontSize16px bg-white textColor2F5BEA text-uppercase">Get
+          <div class="blue-cta-btn-wrapper ">
+            <button class="cta-get-started btn-bg-white aileronBold fontSize16px textColor2F5BEA text-uppercase">Get
               started</button>
           </div>
 
@@ -574,16 +574,16 @@
     <div class="container">
       <div class="row d-flex justify-content-md-between">
         <div class="left-part col-md-4 d-flex  justify-content-center  justify-content-md-start">
-          <div class="status aileronBold fontSize14px textColor54565A">
-            Status
+          <div class="status ">
+            <a href="#" class="aileronBold fontSize14px textColor54565A">Status</a>
           </div>
 
-          <div class="privacy aileronBold fontSize14px textColor54565A">
-            Privacy & Terms
+          <div class="privacy">
+            <a href="#" class="aileronBold fontSize14px textColor54565A">Privacy & Terms</a>
           </div>
           
-          <div class="contact-us aileronBold fontSize14px textColor54565A">
-            Contact Us
+          <div class="contact-us">
+            <a href="#" class="aileronBold fontSize14px textColor54565A">Contact Us</a>
           </div>
         </div>
 
