--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -16,14 +16,14 @@
 <body>
   <header>
     <div class="navbar-wrapper container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand d-flex align-items-center" href="index.html"><img src="image/logo.png" alt="logo"> <span
             class="logo-text aileronBold">xPider</span> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-lg-between" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse justify-content-md-between" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link aileronRegular fontSize17px textColor7E8085" href="#">Features <span
@@ -37,10 +37,10 @@
                 id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Pages <span class="drop-down-nav-icon"><i class="fas fa-chevron-down"></i></span>
               </a>
-              <div class="dropdown-menu backgroundColor2F5BEA" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item text-white" href="#">Page 1</a>
-                <a class="dropdown-item text-white" href="#">Page 2</a>
-                <a class="dropdown-item text-white" href="#">Page 3</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Page 1</a>
+                <a class="dropdown-item" href="#">Page 2</a>
+                <a class="dropdown-item" href="#">Page 3</a>
               </div>
             </li>
           </ul>
@@ -143,13 +143,13 @@
               </div>
               <div class="technology-content-description">
                 <ul>
-                  <li class="aileronRegular textColor54565A lineHeight28px">
+                  <li class="aileronRegular textColor54565A lineHeight28px d-flex justify-content-start">
                     Your users are impatient. They're probably distracted too. Keep it simple and beautiful, fun and
                     functional. By a strong
                     concept is what we stand for.
                   </li>
 
-                  <li class="aileronRegular textColor54565A lineHeight28px">
+                  <li class="aileronRegular textColor54565A lineHeight28px d-flex justify-content-start">
                     They're probably distracted too. Keep it simple & clean, fun and functional. Clean aesthetics
                     supported.
                   </li>
