update local storage for list (no data)

--- a/kanban-project/index.html
+++ b/kanban-project/index.html
@@ -321,8 +321,7 @@
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-gray btn-flat gray">Cancel</a>
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat green  darken-3"
-                    id="modal-delete-btn">Delete</a>
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat green  darken-3" id="modal-delete-btn">Delete</a>
             </div>
         </div>
 
@@ -331,14 +330,12 @@
                 <h4>Edit task</h4>
                 <div class="edit-content-box">
 
-                    <textarea type="text" class="edit-content" onkeyup="newTaskContentBox(this)"
-                        autofocus value="value text"></textarea>
+                    <textarea type="text" class="edit-content" onkeyup="newTaskContentBox(this)" autofocus value="value text"></textarea>
                 </div>
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-gray btn-flat gray">Cancel</a>
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat green  darken-3"
-                    id="modal-save-btn">Save</a>
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat green  darken-3" id="modal-save-btn">Save</a>
             </div>
         </div>
     </main>
