update orange line in price, hover effect buttons

--- a/cut_html_css_exercise/index.html
+++ b/cut_html_css_exercise/index.html
@@ -50,7 +50,7 @@
 
             <div class="banner-text container">
                 <div class="row">
-                    <div class="title .font-weight-bold text-white font-size-46px col-md-6">
+                    <div class="title font-weight-bold text-white font-size-46px col-md-6">
                         Intensive weekend workshop of your product
                     </div>
                 </div>
@@ -292,7 +292,7 @@
                         </div>
                     </div>
 
-                    <div class="box participant-box col-md-4">
+                    <div class="box participant-box col-md-4 position-relative">
                         <img src="image/one-dot.png" alt="one-dot" class="dots">
 
                         <div class="content text-white">
