update orange line

--- a/cut_html_css_exercise/index.html
+++ b/cut_html_css_exercise/index.html
@@ -307,7 +307,7 @@
                         </div>
                     </div>
                     <div class="team-circle position-absolute">
-                        <img src="image/team.png" alt="team" class="img-fluid">
+                        <img src="image/team2.png" alt="team" class="img-fluid">
                     </div>
                 </div>
             </div>
