update sortable task with localStorage

--- a/kanban-project/index.html
+++ b/kanban-project/index.html
@@ -14,19 +14,16 @@
 
 <body class="body">
     <header>
-        <div class="background-header">
+        <div class="background-header center">
             <div class="logo-text">
                 Kanbard
-            </div>
-
-            <div class="config">
-                <i class="fas fa-cog"></i>
             </div>
         </div>
     </header>
 
     <main class="container-wrapper">
         <div class="list">
+            <div class="list-slot"></div>
             <div class="add-new-card" onclick="kanbard.addNewList(event, this)">
                 <i class="fas fa-plus-circle"></i>
                 <div class="add-new-task">
