--- a/obo-stadium/index.html
+++ b/obo-stadium/index.html
@@ -10,17 +10,23 @@
     <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
-    <link rel="stylesheet" type="text/css" href="../css/all.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+
+    <!-- Slick CSS -->
+    <link rel="stylesheet" type="text/css" href="./vendor/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./vendor/slick/slick-theme.css" />
+
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" type="text/css" href="./vendor/fontawesome/css/all.css">
+    
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+
     <title>Hello, world!</title>
 </head>
 
 <body>
     <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light container">
-            <a class="navbar-brand" href="#"> <img src="../image/logo-white.png" alt="logo" class="img-fluid"></a>
+            <a class="navbar-brand" href="#"> <img src="./image/logo-white.png" alt="logo" class="img-fluid"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -68,7 +74,7 @@
             <div class="row product-row d-flex justify-content-md-between">
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Adidas Yeezy Boost 350
@@ -83,7 +89,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Jordan 4 Retro Cool Grey (2019)</h5>
@@ -97,7 +103,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Jordan 1 Retro Low OG SP Travis Scott</h5>
@@ -111,7 +117,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Air Jordan 1 Mid Yellow Toe Black</h5>
@@ -124,7 +130,7 @@
                 </div>
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Nike SB Dunk Low Parra</h5>
@@ -139,7 +145,7 @@
         </section>
 
         <section class="break-banner">
-            <a href="#"><img src="../image/promo-banner-1.png" alt="promo-banner-1" id="promo-banner-1"
+            <a href="#"><img src="./image/banner/promo-banner-1-lg.png" alt="promo-banner-1" id="promo-banner-1"
                     class="img-fluid" /></a>
         </section>
 
@@ -153,7 +159,7 @@
             <div class="row product-row d-flex justify-content-md-between">
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Adidas Yeezy Boost 350
@@ -168,7 +174,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Jordan 4 Retro Cool Grey (2019)</h5>
@@ -182,7 +188,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Jordan 1 Retro Low OG SP Travis Scott</h5>
@@ -196,7 +202,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Air Jordan 1 Mid Yellow Toe Black</h5>
@@ -209,7 +215,7 @@
                 </div>
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Nike SB Dunk Low Parra</h5>
@@ -224,7 +230,7 @@
         </section>
 
         <section class="break-banner">
-            <a href="#"><img src="../image/promo-banner-2.png" alt="promo-banner-2" id="promo-banner-2" class="img-fluid" /></a>
+            <a href="#"><img src="./image/banner/promo-banner-2-lg.png" alt="promo-banner-2" id="promo-banner-2" class="img-fluid" /></a>
         </section>
 
         <section class="products-showcase container">
@@ -237,7 +243,7 @@
             <div class="row product-row d-flex justify-content-md-between">
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Adidas Yeezy Boost 350
@@ -252,7 +258,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Jordan 4 Retro Cool Grey (2019)</h5>
@@ -266,7 +272,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Jordan 1 Retro Low OG SP Travis Scott</h5>
@@ -280,7 +286,7 @@
 
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Air Jordan 1 Mid Yellow Toe Black</h5>
@@ -293,7 +299,7 @@
                 </div>
                 <div class="product position-relative">
                     <div class="card">
-                        <img src="../image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                        <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
                             alt="adidas-Yeezy-Boost-350-V2-Lundmark">
                         <div class="card-body">
                             <h5 class="card-title">Nike SB Dunk Low Parra</h5>
@@ -308,7 +314,7 @@
         </section>
 
         <section class="break-banner">
-            <a href="#"><img src="../image/promo-banner-3.png" alt="promo-banner-3" id="promo-banner-3" class="img-fluid" /></a>
+            <a href="#"><img src="./image/banner/promo-banner-3-lg.png" alt="promo-banner-3" id="promo-banner-3" class="img-fluid" /></a>
         </section>
 
         <section class="categories-showcase container">
@@ -320,7 +326,7 @@
             <div class="row categories-row d-flex justify-content-md-between">
                 <div class="category col-sm-4">
                     <a href="#" class="category-wrap">
-                        <img src="../image/categories/category-1.png" alt="category-1" class="img-fluid">
+                        <img src="./image/categories/category-1.png" alt="category-1" class="img-fluid">
                         <div class="tag">
                             TECH PERFORMANCE
                         </div>
@@ -330,7 +336,7 @@
 
                 <div class="category col-sm-4"">
                     <a href=" #" class=" category-wrap">
-                    <img src=" ../image/categories/category-2.png" alt="category-2" class="img-fluid">
+                    <img src=" ./image/categories/category-2.png" alt="category-2" class="img-fluid">
                     <div class="tag">
                         OFF-WHITE
                     </div>
@@ -339,7 +345,7 @@
 
                 <div class="category col-sm-4"">
                 <a href=" #" class=" category-wrap">
-                    <img src=" ../image/categories/category-3.png" alt="category-3" class="img-fluid">
+                    <img src=" ./image/categories/category-3.png" alt="category-3" class="img-fluid">
                     <div class="tag">
                         SUPREME
                     </div>
@@ -348,7 +354,7 @@
 
                 <div class="category col-sm-4"">
                 <a href=" #" class=" category-wrap">
-                    <img src=" ../image/categories/category-4.png" alt="category-4" class="img-fluid">
+                    <img src=" ./image/categories/category-4.png" alt="category-4" class="img-fluid">
                     <div class="tag">
                         NBA
                     </div>
@@ -357,7 +363,7 @@
 
                 <div class="category col-sm-4"">
                 <a href=" #" class=" category-wrap">
-                    <img src=" ../image/categories/category-5.png" alt="category-5" class="img-fluid">
+                    <img src=" ./image/categories/category-5.png" alt="category-5" class="img-fluid">
                     <div class="tag">
                         YEEZY
                     </div>
@@ -366,7 +372,7 @@
 
                 <div class="category col-sm-4" id="last-category">
                 <a href=" #" class=" category-wrap">
-                    <img src=" ../image/categories/category-6.png" alt="category-6" class="img-fluid">
+                    <img src=" ./image/categories/category-6.png" alt="category-6" class="img-fluid">
                     <div class="tag">
                         Comme Des Garçons
                     </div>
@@ -406,7 +412,7 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="../image/news/news-1.jpg" class="card-img-top"
+                        <img src="./image/news/news-1.jpg" class="card-img-top"
                             alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
@@ -419,7 +425,7 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="../image/news/news-2.jpg" class="card-img-top" alt="news-1">
+                        <img src="./image/news/news-2.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
                             <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
@@ -431,7 +437,7 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="../image/news/news-3.jpg" class="card-img-top" alt="news-1">
+                        <img src="./image/news/news-3.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
                             <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
@@ -443,7 +449,7 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="../image/news/news-4.png" class="card-img-top" alt="news-1">
+                        <img src="./image/news/news-4.png" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
                             <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
@@ -455,7 +461,7 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="../image/news/news-5.jpg" class="card-img-top" alt="news-1">
+                        <img src="./image/news/news-5.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
                             <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
@@ -467,7 +473,7 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="../image/news/news-1.jpg" class="card-img-top" alt="news-1">
+                        <img src="./image/news/news-1.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
                             <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
@@ -479,7 +485,7 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="../image/news/news-1.jpg" class="card-img-top" alt="news-1">
+                        <img src="./image/news/news-1.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
                             <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
@@ -497,7 +503,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="logo col-md-3 col-12 text-md-left text-center">
-                    <img src="../image/logo-white.png" alt="logo" class="img-fluid">
+                    <img src="./image/logo-white.png" alt="logo" class="img-fluid">
                 </div>
 
                 <div
@@ -522,9 +528,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
-    <script type="text/javascript" src="../script/main.js"></script>
+    <!-- Slick Js -->
+    <script type="text/javascript" src="./vendor/slick/slick.min.js"></script>
+
+    <script type="text/javascript" src="./script/main.js"></script>
 </body>
 
 </html>
