--- a/obo-stadium/product-page.html
+++ b/obo-stadium/product-page.html
@@ -10,20 +10,25 @@
     <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
-    <link rel="stylesheet" type="text/css" href="../css/all.css">
+
+
+    <!-- Slick -->
+    <link rel="stylesheet" type="text/css" href="./vendor/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./vendor/slick/slick-theme.css" />
+
+
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" type="text/css" href="./vendor/fontawesome/css/all.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
-    <link rel="stylesheet" href="../css/product-page.css">
+    <link rel="stylesheet" href="./css/product-page.css">
     <title>Hello, world!</title>
 </head>
 
 <body>
     <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light container">
-            <a class="navbar-brand" href="#"> <img src="../image/logo-white.png" alt="logo" class="img-fluid"></a>
+            <a class="navbar-brand" href="#"> <img src="./image/logo-white.png" alt="logo" class="img-fluid"></a>
 
             <div class="search-form">
                 <form>
@@ -53,8 +58,7 @@
 
     <main>
         <div class="breadcrum container">
-            <a href="./index.html">Trang chủ</a><span class="arrow"></span><a href="./shop.html">Sản phẩm</a><span
-                class="arrow"></span><span class="current-page">Tên sản phẩm</span>
+            <a href="./index.html">Trang chủ</a><i class="fas fa-chevron-right arrow"></i><a href="./shop.html">Sản phẩm</a><i class="fas fa-chevron-right arrow"></i><span class="current-page">Tên sản phẩm</span>
         </div>
 
         <div class="product-content-wrapper container">
@@ -88,7 +92,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="logo col-md-3 col-12 text-md-left text-center">
-                    <img src="../image/logo-white.png" alt="logo" class="img-fluid">
+                    <img src="./image/logo-white.png" alt="logo" class="img-fluid">
                 </div>
 
                 <div
@@ -112,8 +116,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="../script/exept-home-page.js"></script>
-    <script src="../script/shop.js"></script>
+    <script src="./script/exept-home-page.js"></script>
+    <script src="./script/shop.js"></script>
 </body>
 
 </html>
