try to used instafeed

--- a/obo-stadium/index.html
+++ b/obo-stadium/index.html
@@ -15,9 +15,17 @@
 
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" type="text/css" href="./vendor/fontawesome/css/all.css">
-    
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
 
+    <!-- Components CSS -->
+    <link rel="stylesheet" type="text/css" href="./css/components/products.css">
+    <link rel="stylesheet" type="text/css" href="./css/components/lastest-news.css">
+    <link rel="stylesheet" type="text/css" href="./css/components/index/index-newsletter.css">
+    <link rel="stylesheet" type="text/css" href="./css/components/index/index-category.css">
+    <link rel="stylesheet" type="text/css" href="./css/components/index/product-showcase.css">
+    
+    <!-- Common CSS -->
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <title>Hello, world!</title>
 </head>
 
@@ -62,9 +70,11 @@
         </div>
     </header>
     <main>
+
+        <!-- Best Seller Section -->
         <section class="products-showcase container">
             <div class="row">
-                <div class="title d-flex justify-content-between align-items-start col-12">
+                <div class="title col-12">
                     <h2 class="h2">Sản phẩm bán chạy</h2>
                     <a href="#" class="see-more-btn-text text-uppercase">Xem Thêm</a>
                 </div>
@@ -142,14 +152,16 @@
             </div>
         </section>
 
+        <!-- Break Banner -->
         <section class="break-banner">
             <a href="#"><img src="./image/banner/promo-banner-1-lg.png" alt="promo-banner-1" id="promo-banner-1"
                     class="img-fluid" /></a>
         </section>
 
+        <!-- Staff Selects -->
         <section class="products-showcase container">
             <div class="row">
-                <div class="title d-flex justify-content-between align-items-start col-12">
+                <div class="title col-12">
                     <h2 class="h2">Sản phẩm bán chạy</h2>
                     <a href="#" class="see-more-btn-text text-uppercase">Xem Thêm</a>
                 </div>
@@ -227,13 +239,16 @@
             </div>
         </section>
 
+        <!-- Break Banner -->
         <section class="break-banner">
-            <a href="#"><img src="./image/banner/promo-banner-2-lg.png" alt="promo-banner-2" id="promo-banner-2" class="img-fluid" /></a>
+            <a href="#"><img src="./image/banner/promo-banner-2-lg.png" alt="promo-banner-2" id="promo-banner-2"
+                    class="img-fluid" /></a>
         </section>
 
+        <!-- Under retails -->
         <section class="products-showcase container">
             <div class="row">
-                <div class="title d-flex justify-content-between align-items-start col-12">
+                <div class="title col-12">
                     <h2 class="h2">Sản phẩm bán chạy</h2>
                     <a href="#" class="see-more-btn-text text-uppercase">Xem Thêm</a>
                 </div>
@@ -311,13 +326,16 @@
             </div>
         </section>
 
+        <!-- Break Banner -->
         <section class="break-banner">
-            <a href="#"><img src="./image/banner/promo-banner-3-lg.png" alt="promo-banner-3" id="promo-banner-3" class="img-fluid" /></a>
+            <a href="#"><img src="./image/banner/promo-banner-3-lg.png" alt="promo-banner-3" id="promo-banner-3"
+                    class="img-fluid" /></a>
         </section>
 
+        <!-- Category Section -->
         <section class="categories-showcase container">
             <div class="row">
-                <div class="title d-flex justify-content-between align-items-start col-12">
+                <div class="title col-12">
                     <h2 class="h2">Bộ Sưu Tập</h2>
                 </div>
             </div>
@@ -369,16 +387,17 @@
                 </div>
 
                 <div class="category col-sm-4" id="last-category">
-                <a href=" #" class=" category-wrap">
-                    <img src=" ./image/categories/category-6.png" alt="category-6" class="img-fluid">
-                    <div class="tag">
-                        Comme Des Garçons
-                    </div>
+                    <a href=" #" class=" category-wrap">
+                        <img src=" ./image/categories/category-6.png" alt="category-6" class="img-fluid">
+                        <div class="tag">
+                            Comme Des Garçons
+                        </div>
                     </a>
                 </div>
             </div>
         </section>
 
+        <!-- Newsletter Section -->
         <section class="newsletter container-fluid d-flex justify-content-center">
             <div class="newsletter-form-wrapper">
                 <div class="title">
@@ -398,9 +417,10 @@
             </div>
         </section>
 
+        <!-- Lastest News Section -->
         <section class="latest-news container">
             <div class="row">
-                <div class="title d-flex justify-content-between align-items-start col-12">
+                <div class="title col-12">
                     <h2 class="h2">Bài viết mới</h2>
                     <a href="#" class="see-more-btn-text text-uppercase">Xem Thêm</a>
                 </div>
@@ -410,11 +430,11 @@
 
                 <div class="news position-relative">
                     <div class="card">
-                        <img src="./image/news/news-1.jpg" class="card-img-top"
-                            alt="news-1">
+                        <img src="./image/news/news-1.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
-                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
+                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt
+                                với</p>
                             <p class="card-text author">By <span class="name">Cody</span> · 27/07/2019</p>
                         </div>
                     </div>
@@ -426,7 +446,8 @@
                         <img src="./image/news/news-2.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
-                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
+                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt
+                                với</p>
                             <p class="card-text author">By <span class="name">Cody</span> · 27/07/2019</p>
                         </div>
                     </div>
@@ -438,7 +459,8 @@
                         <img src="./image/news/news-3.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
-                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
+                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt
+                                với</p>
                             <p class="card-text author">By <span class="name">Cody</span> · 27/07/2019</p>
                         </div>
                     </div>
@@ -450,7 +472,8 @@
                         <img src="./image/news/news-4.png" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
-                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
+                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt
+                                với</p>
                             <p class="card-text author">By <span class="name">Cody</span> · 27/07/2019</p>
                         </div>
                     </div>
@@ -462,7 +485,8 @@
                         <img src="./image/news/news-5.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
-                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
+                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt
+                                với</p>
                             <p class="card-text author">By <span class="name">Cody</span> · 27/07/2019</p>
                         </div>
                     </div>
@@ -474,7 +498,8 @@
                         <img src="./image/news/news-1.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
-                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
+                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt
+                                với</p>
                             <p class="card-text author">By <span class="name">Cody</span> · 27/07/2019</p>
                         </div>
                     </div>
@@ -486,7 +511,8 @@
                         <img src="./image/news/news-1.jpg" class="card-img-top" alt="news-1">
                         <div class="card-body">
                             <h5 class="card-title">Jordan Brand kỷ niệm FIBA bằng một BST “mãn nhãn”</h5>
-                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt với</p>
+                            <p class="card-text news-short-desc">Jordan Brand mới đây đã tung ra một bộ sưu tập đặc biệt
+                                với</p>
                             <p class="card-text author">By <span class="name">Cody</span> · 27/07/2019</p>
                         </div>
                     </div>
