update html instafeed

--- a/obo-stadium/product-details.html
+++ b/obo-stadium/product-details.html
@@ -302,6 +302,8 @@
         </section>
 
         <div class="break-section container-fluid"></div>
+
+        <div id="instafeed"></div>
         
     </main>
 
