update buying page

--- a/obo-stadium/index.html
+++ b/obo-stadium/index.html
@@ -61,7 +61,7 @@
                 <form class="container">
                     <div class="row d-flex justify-content-center">
                         <input type="text" class="form-control col-md-4 col-12" placeholder="Bạn cần tìm gì...">
-                        <button type="submit" class="btn btn-primary text-uppercase col-xl-2 col-md-3 col-12">Tìm kiếm
+                        <button type="submit" class="btn btn-primary text-uppercase col-xl-2 col-md-3 col-12 red-btn">Tìm kiếm
                             tất
                             cả</button>
                     </div>
@@ -411,7 +411,7 @@
                 <div class="newsletter-form d-flex">
                     <form class="d-flex w-100 justify-content-between flex-column flex-md-row">
                         <input type="text" class="form-control" placeholder="Nhập địa chỉ email của bạn">
-                        <button type="submit" class="btn btn-primary text-uppercase">đăng ký</button>
+                        <button type="submit" class="btn btn-primary text-uppercase red-btn">đăng ký</button>
                     </form>
                 </div>
             </div>
