--- a/obo-stadium/shop.html
+++ b/obo-stadium/shop.html
@@ -12,6 +12,7 @@
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" type="text/css" href="./vendor/fontawesome/css/all.css">
 
+    <!-- Pretty Checkbox CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
 
     <!-- Components CSS -->
@@ -266,7 +267,7 @@
                         <input type="text" placeholder="Đến" class="form-control price-input" pattern="[0-9]"
                             onkeypress="return priceInputValidate(event)">
 
-                        <button class="btn btn-primary apply-price">
+                        <button class="btn btn-primary apply-price red-btn">
                             áp dụng
                         </button>
                     </div>
