update sell + congrats + faqs page

--- a/obo-stadium/index.html
+++ b/obo-stadium/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="./shop.html">Sản phẩm</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tin tức</a>
+                        <a class="nav-link" href="./news.html">Tin tức</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Tài khoản</a>
@@ -532,7 +532,7 @@
 
                 <div
                     class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column">
-                    <a href="#" class="item">Các câu hỏi thường gặp</a>
+                    <a href="./faqs.html" class="item">Các câu hỏi thường gặp</a>
                     <a href="#" class="item">Điều khoản</a>
                     <a href="#" class="item">Chính sách</a>
                     <a href="#" class="item">Hỗ trợ</a>
