--- a/obo-stadium/product-details.html
+++ b/obo-stadium/product-details.html
@@ -197,7 +197,7 @@
                             </button>
                         </a>
 
-                        <a href="#" class="sell-btn">
+                        <a href="./sell-page.html" class="sell-btn">
                             <button class="btn btn-primary sell red-btn">
                                 <div class="ask-text left-content">
                                     <div class="bid-price main-content">
