--- a/obo-stadium/shop.html
+++ b/obo-stadium/shop.html
@@ -767,7 +767,7 @@
     <script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="./script/exept-home-page.js"></script>
+    <script src="./script/except-home-page.js"></script>
     <script src="./script/shop.js"></script>
 </body>
 
