update news wip

--- a/obo-stadium/shop.html
+++ b/obo-stadium/shop.html
@@ -36,6 +36,9 @@
             <div class="search-form">
                 <form>
                     <input type="text" class="form-control" placeholder="Bạn cần tìm gì...">
+                    <button type="submit" class="btn btn-primary text-uppercase col-xl-2 col-md-3 col-12 red-btn">
+                        Tìm kiếm tất cả
+                    </button>
                 </form>
             </div>
 
