update post page

--- a/obo-stadium/index.html
+++ b/obo-stadium/index.html
@@ -550,6 +550,7 @@
     <script type="text/javascript" src="./vendor/slick/slick.min.js"></script>
 
     <script type="text/javascript" src="./script/main.js"></script>
+    <script type="text/javascript" src="./script/lastest-news.js"></script>
 </body>
 
 </html>
