update buying selling product page

--- a/obo-stadium/index.html
+++ b/obo-stadium/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="./news.html">Tin tức</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tài khoản</a>
+                        <a class="nav-link" href="./account.html">Tài khoản</a>
                     </li>
                 </ul>
             </div>
