--- a/obo-stadium/post.html
+++ b/obo-stadium/post.html
@@ -200,17 +200,17 @@
                     </div>
 
                     <div class="social-info">
-                        <div class="email">
+                        <a href="#" class="email icon">
                             <i class="fas fa-envelope"></i>
-                        </div>
+                        </a>
 
-                        <div class="facebook">
-                            <i class="fab fa-facebook-square"></i>
-                        </div>
+                        <a href="#" class="facebook icon">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
 
-                        <div class="twitter">
-                            <i class="fab fa-twitter-square"></i>
-                        </div>
+                        <a href="#" class="twitter icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </div>
                 </div>
             </div>
