--- a/obo-stadium/shop.html
+++ b/obo-stadium/shop.html
@@ -436,7 +436,7 @@
                     </div>
 
                     <div class="product-row">
-                        <a href="./product-details.html" class="product-link">
+                        <a href="./product-details.html" class="product-link" id="123456">
                             <div class="product position-relative">
                                 <div class="card">
                                     <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png"
@@ -453,20 +453,22 @@
                             </div>
                         </a>
 
-
-                        <div class="product position-relative">
-                            <div class="card">
-                                <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png"
-                                    class="card-img-top" alt="adidas-Yeezy-Boost-350-V2-Lundmark">
-                                <div class="card-body">
-                                    <h5 class="card-title">Jordan 4 Retro Cool Grey (2019)</h5>
-                                    <p class="card-text price-desc">Giá thấp nhất hiện tại</p>
-                                    <p class="price">4.810.000 ₫</p>
-                                    <p class="card-text sold">Đã bán 1312 đôi</p>
+                        <a href="./index.html" class="product-link" id="78910">
+                            <div class="product position-relative">
+                                <div class="card">
+                                    <img src="./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png" class="card-img-top"
+                                        alt="adidas-Yeezy-Boost-350-V2-Lundmark">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Jordan 4 Retro Cool Grey (2019)</h5>
+                                        <p class="card-text price-desc">Giá thấp nhất hiện tại</p>
+                                        <p class="price">4.810.000 ₫</p>
+                                        <p class="card-text sold">Đã bán 1312 đôi</p>
+                                    </div>
                                 </div>
+                                <div class="shadow mx-auto position-absolute"></div>
                             </div>
-                            <div class="shadow mx-auto position-absolute"></div>
-                        </div>
+                        </a>
+                        
 
                         <div class="product position-relative">
                             <div class="card">
